<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Welcome -->
    <string name="app_name">NOTIFIME</string>
    <string name="hello_world">Welcome to NOTIFIME, search your favorite anime and dont get lost track of it by using our notification service</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_welcome">MainActivity</string>
    <string name="content_button_placeholder">Contents List</string>
    <string name="notification_button_placeholder">Notification Management</string>
    <string name="search_button_placeholder">Search</string>
    <string name="loading" translatable="false">Loading</string>
    <string name="search_button_text_off" translatable="false">Manga</string>
    <string name="search_button_text_on" translatable="false">Anime</string>
    <string name="search_button_text" translatable="false">Anime / Manga</string>
    <string name="create_reminder">Create Notification</string>
    <string name="search_layout_title">Search Show</string>
    <string name="history_button_placeholder">Search History</string>
    <string name="menu">Settings</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="main_button_placeholder">Main Page</string>
    <string name="exit_confirmation">Are you sure want to quit?</string>
    <string name="exit_confirmation_yes">Yes</string>
    <string name="exit_confirmation_bo">No</string>
    <string name="text_placeholder" translatable="false">Show</string>
    <string name="popup_internet_title">Internet Connection</string>
    <string name="popup_internet_message">You are offline, turn on WiFi?</string>
    <string name="popup_internet_yes">Yes</string>
    <string name="popup_internet_no">No</string>
    <string name="popup_airplane_title">Airplane</string>
    <string name="popup_airplane_message">You are on airplane mode, turn off airplane mode?</string>
</resources>