<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start">

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <id.ac.ui.cs.mobileprogramming.rizkhiph.notifime.ui.search.SearchView
        android:id="@+id/search"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="60dp"
        android:focusable="true"
        android:focusableInTouchMode="true" >
        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_layout_title"
            android:hint="@string/text_placeholder">
        </TextView>

        <Button
            android:id="@+id/history_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="16dp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:text="@string/history_button_placeholder" />

        <EditText
            android:id="@+id/text_to_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_placeholder"
            android:inputType="text"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/type_to_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@color/colorPrimary"
            android:checked="false"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:text="@string/search_button_text"
            android:textColor="#ffffff"
            android:textOff="@string/search_button_text_off"
            android:textOn="@string/search_button_text_on"
            android:textSize="20sp">

        </androidx.appcompat.widget.SwitchCompat>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/notification_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/create_reminder" />
            <Button
                android:id="@+id/search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/search_button_placeholder" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ListView
                android:id="@+id/textView_fetched_results"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:linksClickable="true"/>
        </LinearLayout>
        <ScrollView
            android:id="@+id/detail"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:visibility="visible"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/thumbnail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <TextView
                    android:id="@+id/detail_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/mal_id_state"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            >
        </TextView>

    </id.ac.ui.cs.mobileprogramming.rizkhiph.notifime.ui.search.SearchView>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/drawer_view" />

</androidx.drawerlayout.widget.DrawerLayout>
